jilles      2006/06/22 13:36:19 UTC	(20060622-5500)
  Log:
  Unreal: deal with client SJOIN creating a channel
  Not tested
  

  Changes:	Modified:
  +6 -2		trunk/protocol/unreal.c (File Modified) 


jilles      2006/06/22 13:30:35 UTC	(20060622-5498)
  Log:
  All m_sjoin(), TS6 m_join():
  Give channel_mode() all parameters (but not the nicklist)
  instead of only the first two. This also simplifies the code.
  

  Changes:	Modified:
  +1 -10	trunk/protocol/bahamut.c (File Modified) 
  +2 -20	trunk/protocol/charybdis.c (File Modified) 
  +2 -20	trunk/protocol/hybrid.c (File Modified) 
  +1 -10	trunk/protocol/hyperion.c (File Modified) 
  +1 -10	trunk/protocol/monkey.c (File Modified) 
  +1 -10	trunk/protocol/plexus.c (File Modified) 
  +1 -10	trunk/protocol/ptlink.c (File Modified) 
  +2 -20	trunk/protocol/ratbox.c (File Modified) 
  +1 -10	trunk/protocol/shadowircd.c (File Modified) 
  +1 -10	trunk/protocol/solidircd.c (File Modified) 
  +1 -10	trunk/protocol/ultimate3.c (File Modified) 
  +1 -10	trunk/protocol/unreal.c (File Modified) 


jilles      2006/06/22 12:59:17 UTC	(20060622-5496)
  Log:
  Use clear_simple_modes() to free the key (and in future
  also the non-standard simple modes with parameters).
  

  Changes:	Modified:
  +1 -2		trunk/src/node.c (File Modified) 


jilles      2006/06/22 12:11:13 UTC	(20060622-5494)
  Log:
  Remove obsolete unused struct flag.
  

  Changes:	Modified:
  +0 -8		trunk/src/function.c (File Modified) 


jilles      2006/06/21 21:23:05 UTC	(20060621-5492)
  Log:
  Use clear_simple_modes() wherever appropriate.
  

  Changes:	Modified:
  +2 -5		trunk/modules/chanserv/main.c (File Modified) 
  +1 -5		trunk/protocol/asuka.c (File Modified) 
  +1 -6		trunk/protocol/bahamut.c (File Modified) 
  +1 -5		trunk/protocol/bircd.c (File Modified) 
  +2 -11	trunk/protocol/charybdis.c (File Modified) 
  +2 -11	trunk/protocol/hybrid.c (File Modified) 
  +1 -5		trunk/protocol/hyperion.c (File Modified) 